FIX: Small fix for overflow

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -284,10 +284,12 @@ a {
       }
       tbody {
         td {
-          text-overflow: ellipsis;
-          overflow: hidden;
-          white-space: nowrap;
-          max-width: 0;
+          &.name {
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+            max-width: 0;
+          }
           img {
             height: 20px;
           }
